# YouTubeTranscriptSummarizer

./: API.json  README.md  package.json  pyproject.toml  ytPlaylistDL.py  ytTranscriptSummarizer.py
chrome extension/: app.py
my-netlify-youtube-summarizer/netlify/functions/: summarize-youtube.js
public/: index.html
pwer/: requirements.txt
