[tool.poetry]
name = "repl_python3_YouTubeTranscriptSummarizer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
youtube-transcript-api = "^0.4.1"
rx = "^3.2.0"
pytube = "^10.8.2"
lxml = "^4.6.3"
python-ntlm = "^1.1.0"
brotli = "^1.0.9"
cryptography = "^3.4.7"
monotonic = "^1.6"
htmlparser = "^0.0.2"
importlib-metadata = "^4.3.1"
lockfile = "^0.12.2"
zipp = "^3.4.1"
ordereddict = "^1.1"
keyring = "^23.0.1"
tornado = "^6.1"
transformers = "^3.1.0"
pysimplegui = "^4.43.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
